rds/rds.stack.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: EC2 configuration and ECS Cluster
Parameters:

  VPCStack:
    Type: String
    Description: VPC Stack Name

  ECSStack:
    Type: String
    Description: ECS Stack Name

  DatabaseUsername:
    AllowedPattern: "^[a-zA-Z0-9]*$"
    ConstraintDescription: must be between 1 to 16 alphanumeric characters.
    Description: The database admin account user name, between 1 to 16 alphanumeric characters.
    MaxLength: '16'
    MinLength: '1'
    Type: String

  DatabasePassword:
    AllowedPattern: "^[a-zA-Z0-9]*$"
    ConstraintDescription: must be between 8 to 41 alphanumeric characters.
    Description: The database admin account password, between 8 to 41 alphanumeric characters.
    MaxLength: '41'
    MinLength: '8'
    NoEcho: 'true'
    Type: String

  InstanceType:
    Type: String
    Default: 'db.t3.small'
    
  DBAllocatedStorage:
    Default: '20'
    Description: The size of the database (Gb)
    Type: Number
    MinValue: '2'
    MaxValue: '512'
    ConstraintDescription: must be between 5 and 1024Gb.

  MultiAZ:
    Description: Multi-AZ master database
    Type: String
    Default: 'false'
    AllowedValues: ['true', 'false']
    ConstraintDescription: must be true or false.


Resources:

  MasterDB:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: !Ref DBAllocatedStorage
      DBInstanceClass: !Ref InstanceType
      PubliclyAccessible: true
      Engine: MySQL
      # Some DB instance properties aren't valid when you restore from a snapshot, such as the MasterUsername and MasterUserPassword properties. 
      DBName: wordpress
      MasterUsername: !Ref DatabaseUsername
      MasterUserPassword: !Ref DatabasePassword
      MultiAZ: !Ref 'MultiAZ'
      Tags:
      - Key: Name
        Value: !Sub ${ECSStack}-Database
      DBSubnetGroupName: !Ref DBSubnetGroup
      VPCSecurityGroups: [ !Ref ClusterSecurityGroup ]
      #TODO change policy to Snapshot in production
    DeletionPolicy: Delete

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: CloudFormation managed DB subnet group.
      SubnetIds: 
        - Fn::ImportValue:
            !Sub "${VPCStack}-PublicSubnet1ID"
        - Fn::ImportValue:
            !Sub "${VPCStack}-PublicSubnet2ID"

  ClusterSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Access to the RDS database
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        IpProtocol: tcp
        FromPort: 3306
        ToPort: 3306
      - IpProtocol: tcp
        FromPort: 3306
        ToPort: 3306
        SourceSecurityGroupId: 
          Fn::ImportValue:
            !Sub "${ECSStack}-ECSHostSecurityGroup"
      VpcId: 
        Fn::ImportValue:
          !Sub "${VPCStack}-VPCID"

Outputs:
  DatabaseUsername:
    Value: !Ref 'DatabaseUsername'
    Export:
      Name: !Sub '${AWS::StackName}-DatabaseUsername'
  DatabasePassword:
    Value: !Ref 'DatabasePassword'
    Export:
      Name: !Sub '${AWS::StackName}-DatabasePassword'
  RDSClusterEndpoint:
    Value: !GetAtt MasterDB.Endpoint.Address
    Export:
      Name: !Sub '${AWS::StackName}-RDSClusterEndpoint'
